Fixed list overflowing (might be temporary)

--- a/src/features/list/assets/_List.scss
+++ b/src/features/list/assets/_List.scss
@@ -5,7 +5,8 @@
 	background-color: var(--bg-dark);
 	height: 100%;
 	position: relative;
-	overflow-y: scroll;
+	overflow-y: auto;
+	overflow-x: hidden;
 
 	padding: 0.5rem;
 	display: flex;
